syntax = "proto3";

option csharp_namespace = "Questionnaire.Services";

package Questionnaire;

import "question.proto";

import "google/api/annotations.proto";

service Questionnaire {
	rpc CreateQuestionnaire (QuestionnaireCreateRequest) returns (QuestionnaireResponse);
	rpc DeleteQuestionnaire (QuestionnaireIdRequest) returns (QuestionnaireEmptyResponse);
	rpc UpdateQuestionnaire (QuestionnaireEditRequest) returns (QuestionnaireResponse);
	rpc GetQuestionnaire (QuestionnaireIdRequest) returns (QuestionnaireResponse) {
		option (google.api.http).get = "/questionnaire/{id}";
	}

	//TODO: result gedeelte moet nog komen, nog niet duidelijk gedefinieerd.
}

message QuestionnaireIdRequest {
  string id = 1;
}

message QuestionnaireEmptyResponse {}

message QuestionnaireCreateRequest {
	string name = 1;
	string description = 2;
	repeated QuestionRequest question = 3;
}

message QuestionnaireEditRequest {
	string id = 1;
	string name = 2;
	string description = 3;
	repeated QuestionRequest question = 4;
}



message QuestionnaireResponse {
	string id = 1;
	string name = 2;
	string description = 3;
	repeated QuestionResponse question = 4;
}
